# remote_loihi_poc

./: .gitignore  LICENSE  README.md  forward_port.sh
cs_lava/: demo_socket.py  models.py  socket_process.py
demos/auto_ssh_exec/: client.py
demos/basic_com/: client.py  multi_shape_client.py  server.py
demos/meaningful_com/: multi_shape_client.py  server.py
demos/numpy_protocol/: client.py  numpy_client.py  numpy_server.py  server.py
demos/remote_client/: lava_client.py  lava_server.py
snippets/: _utils.py  clientprocess.py  echo_client.py  echo_server.py  encode_numpy.py  numpy_client.py  numpy_server.py  pyclientprocess.py  remote_ssh_exec.py  test_injector.py
src/: pyproject.toml  setup.py
src/remote_loihi/com_protocol/: __init__.py  messages.py  numpy_encoding.py  numpy_messages.py
src/remote_loihi/lava/: __init__.py  pyclientprocess.py  pyserverprocess.py
src/remote_loihi/routing/: __init__.py  host_port.py  socket_utils.py
